KUBE/clusters/mac/lab/platform/gateways/k8s-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: k8s-gateway
  namespace: plt-gateway
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: "*.k8s.local"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "*.k8s.local"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: k8s-local-tls
      allowedRoutes:
        namespaces:
          from: All
